# agent

./: .agent.toml  .clinerules  .dprint.jsonc  .gitignore  .ok.toml  CHANGELOG.md  README.md  config.schema.json  main.py  mise.toml  mock_llm_data.toml  pyproject.toml  ruff.toml
ai/: README.md  codebase_conventions.md  learnings.md  log.md
scripts/: build_opencode.py  generate_schema.py  show_eliot_logs.py
src/: config.py  constants.py  gemini_agent.py  git_utils.py  main.py  state_manager.py  task_implementation.py  task_orchestrator.py  task_planning.py  task_processor.py  utils.py
src/agent/: cli_settings.py  config.py  constants.py  gemini_agent.py  git_utils.py  llm.py  logging.py  main.py  output_formatter.py  state_manager.py  task_implementation.py  task_orchestrator.py  task_planning.py  task_result.py  ui.py  utils.py
src/agent/llms/: __init__.py  base.py  claude.py  codex.py  gemini.py  mock.py  opencode.py  openrouter.py
src/agent/ui/: status_manager.py
src/agent/util/: eliot.py
src/ok/: config.py  constants.py  env.py  git_utils.py  llm.py  log.py  logging.py  main.py  rich_env.py  state_manager.py  task_implementation.py  task_orchestrator.py  task_planning.py  task_result.py  ui.py  utils.py
src/ok/llms/: __init__.py  base.py  claude.py  codex.py  gemini.py  mock.py  opencode.py  openrouter.py
src/ok/util/: pydantic.py
src/ui/: status_manager.py
tests/: debug_path.py  test_git_utils.py  test_implementation_phase.py  test_implementation_phase_failure.py  test_llm.py
