[project]
name = "agent"
version = "99.0.0"
description = "Agentic loop"
dependencies = ["rich", "pydantic"]
requires-python = ">=3.13"

[project.scripts]
agent = "agent.main:main"

[dependency-groups]
dev = ["ruff>=0.12.2"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
