[project]
name = "agent"
version = "99.0.0"
description = "Agentic loop"
dependencies = [
    "rich",
    "pydantic",
    "pydantic-settings>=2.10.1",
    "eliot>=1.17.5",
    "trio>=0.30.0",
    "pygments>=2.19.2",
]
requires-python = ">=3.13"

[project.scripts]
agent = "agent.main:main"

[dependency-groups]
dev = [
    "eliot-tree>=24.0.0",
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[tool.pyright]
include = ["src", "tests"]
