[project]
name = "ok"
version = "99.0.0"
description = "Agentic loop"
dependencies = [
    "rich",
    "pydantic",
    "pydantic-settings>=2.10.1",
    "eliot>=1.17.5",
    "trio>=0.30.0",
    "pygments>=2.19.2",
    "patchy>=2.9.0",
]
requires-python = ">=3.13"

[project.scripts]
ok = "ok.main:main"

[dependency-groups]
dev = [
    "eliot-tree>=24.0.0",
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
    "pytest-trio>=0.8.0",
    "autoimport>=1.6.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
trio_mode = true

[tool.pyright]
include = ["src", "tests", "scripts"]

[tool.autoimport]
disable_move_to_top = true
